objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>MDM_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDM External Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_region__c</fullName>
        <label>Sub region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sub_region__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>